<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2016 IBM Corp.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>
    <string name="app_name">PushNotificationsAndroid</string>
    <string name="action_settings">Settings</string>
    <string name="hello_push">Hello Push!</string>
    <string name="btn_is_push_supported">Is Push Supported</string>
    <string name="btn_register_device">Register Device</string>
    <string name="btn_get_tags">Get Tags</string>
    <string name="btn_subscribe">Subscribe</string>
    <string name="btn_get_subscriptions">Get Subscriptions</string>
    <string name="btn_unsubscribe">Unsubscribe</string>
    <string name="btn_unregister_device">Unregister Device</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_login">Login</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="label_remaining_attempts">Remaining Attempts: </string>
    <string name="remember_me_label">Remember Me</string>
    <string name="PushElectraa">PushElectraa</string>
    <string name="phoneNumber">Phone Number</string>
</resources>
